2.0.5.dev
----------------

- fix issue145: restrict devpi_common dependency so that a future
  "pip install 'devpi-server<2.0'" has a higher chance of working.

- fix issue144: fix interaction with requests-2.4.0 -- 
  use new devpi-common-offered "Errors" enumeration to check for exceptions.
  

2.0.4
----------------

- fix issue139: adapt to a recent change in pypi which now serves
  under URLs using normalized project names instead of the "real" registered name
  Thanks Timothy Allen and others for sorting this out.
  
- fix issue129: fix __init__ provided version and add a test that it always matches
  the one which pkg_resources sees (which gets it effectively from setup.py)

2.0.3
----------------

- fix issue128: a basic auth challenge needs to be sent back on submit when no
  authorization headers are sent with the post request.

2.0.2
----------------

- fix issue120: link to "upgrade" section from main index page.

- preserve http reason string for setup.py submit through replica proxying

- proper error message when "devpi push X" uses an X that comes from 
  a base index or is not existent

- fix issue121: depend on py-1.4.23 to fix python3.4 compatibility
  for a venusian/py34/py interaction import oddity.

- fix issue126: handle deletion of pypi project cache entries correctly 
  (i.e. ones that are triggered by "refresh" on simple page).

- Add special handling of ":ANONYMOUS:" user in acl_upload to allow anonymous
  submit.

- fix nginx template so that when used in a replica setting the master
  always answers HEAD requests without nginx short-cirtcuiting it.

- increase internal cache size to improve performance when many indexes
  and projects are served.

2.0.1
----------------

- fix regression which prevented the basic authentication for the setuptools
  upload/register commands to fail. Thanks Florian Schulze.

- fix issue106: better error messages on upload failures.
  And better allow auto-registration when uploading release files.

2.0.0