@@ -6,7 +6,9 @@
 
 - fix issue144: fix interaction with requests-2.4.0 -- 
   use new devpi-common-offered "Errors" enumeration to check for exceptions.
-  
+
+- add '*' as possible option for pypi_whitelist to whitelist all packages of
+  an index at once. Refs issue110
 
 2.0.4
 ----------------
